Frontend documentation: Add message key for images alternative text
Add Message key for alternative text for AddLink and AddImage dialogs images
Add new messages to the "en" messages file with alt text from https://phabricator.wikimedia.org/T335523
Use translations in AddLink and AddImage dialogs images alt text

Bug: T336355
Change-Id: Ib1443aa2d45e95d1041a7099a642b21fb56735d0

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -415,11 +415,14 @@
 	"growthexperiments-addlink-onboarding-content-intro-body-example-label": "Example sentence",
 	"growthexperiments-addlink-onboarding-content-intro-body-example-text": "The moon is the only <mark class=\"positive\">natural satellite</mark> that <mark class=\"positive\">orbits</mark> around the <mark class=\"positive\">Earth</mark>.",
 	"growthexperiments-addlink-onboarding-content-intro-body-paragraph2": "No special knowledge about the article is needed to do this task.",
+	"growthexperiments-addlink-onboarding-content-intro-image-alt-text": "Illustration of the moon article, with the articles Earth and Satellite being suggested as links that could be added to the associated text.",
 	"growthexperiments-addlink-onboarding-content-about-suggested-links-title": "Suggested links are machine-generated, and can be incorrect.",
 	"growthexperiments-addlink-onboarding-content-about-suggested-links-body": "The suggestions might be on words that don’t need them, or might link to the wrong article. Use {{GENDER:$1|your}} judgment to decide whether they are right or wrong.",
 	"growthexperiments-addlink-onboarding-content-about-suggested-links-body-learn-more-link-text": "Learn more about machine suggestions",
+	"growthexperiments-addlink-onboarding-content-about-image-alt-text": "Illustration of the moon article, next to the article there's a robot representing a machine suggestion - asking if a word on the Moon article should be linked to the Cheese article.",
 	"growthexperiments-addlink-onboarding-content-linking-guidelines-title": "Guidelines",
 	"growthexperiments-addlink-onboarding-content-linking-guidelines-body": "<li>Link concepts that a reader might want to learn more about.</li><li>Make sure the link is going to the right article.</li><li>Don't link common words, years, or dates.</li><li>If {{GENDER:$1|you're}} not sure, skip.</li>",
+	"growthexperiments-addlink-onboarding-content-linking-image-alt-text": "Illustration of an article sentence showing link suggestions for two different words. Next to the suggestion there's a blue check icon and a red cross icon for the options to accept or reject the suggestion.",
 	"growthexperiments-structuredtask-onboarding-dialog-label-skip-all": "Skip all",
 	"growthexperiments-structuredtask-onboarding-dialog-title": "Introduction",
 	"growthexperiments-structuredtask-onboarding-dialog-progress": "$1 of $2",
@@ -494,14 +497,18 @@
 	"growthexperiments-addimage-onboarding-content-intro-body-paragraph1": "{{GENDER:|You}} will decide whether a suggested image should be put in a Wikipedia article.",
 	"growthexperiments-addimage-onboarding-content-intro-body-paragraph2": "Suggestions are machine-generated, and {{GENDER:|you'll use your}} judgment to decide whether to accept or reject them.",
 	"growthexperiments-addimage-onboarding-content-intro-body-paragraph3": "Images come from Wikimedia Commons, a collection of freely licensed images used by Wikipedia.",
+	"growthexperiments-addimage-onboarding-content-intro-image-alt-text": "Illustration of the moon article. Next to the article illustration there's a robot asking if an image of the moon should be added to the article.",
 	"growthexperiments-addimage-onboarding-content-imagedetails-title": "Look at the suggested image",
 	"growthexperiments-addimage-onboarding-content-imagedetails-body-paragraph1": "Use the filename, description, and the reason it was suggested to help {{GENDER:|you}} decide if it should be placed in the article.",
 	"growthexperiments-addimage-onboarding-content-imagedetails-body-paragraph2": "{{GENDER:|You}} can also expand the image to view it more clearly.",
+	"growthexperiments-addimage-onboarding-content-imagedetails-image-alt-text": "Illustration of an article. An image is being suggested for the article. The image suggestion is zoomed in to highlight that the image suggestion and details should be reviewed.",
 	"growthexperiments-addimage-onboarding-content-article-title": "Look at the article",
 	"growthexperiments-addimage-onboarding-content-article-body": "Read over the article and think about whether the suggested image will help readers understand the content. Is it appropriate to display in the article?",
+	"growthexperiments-addimage-onboarding-content-article-image-alt-text": "Illustration of an article. At the bottom of the article there’s an image suggestion.",
 	"growthexperiments-addimage-onboarding-content-decision-title": "Decide if the image belongs",
 	"growthexperiments-addimage-onboarding-content-decision-body-paragraph1": "The suggestion may be unrelated to the article, low quality, or may not belong for other reasons. Use {{GENDER:|your}} judgment to decide whether the suggestion is right or wrong.",
 	"growthexperiments-addimage-onboarding-content-decision-body-paragraph2": "After {{GENDER:|you}} accept an image, {{GENDER:|you'll}} write a short caption, and then {{GENDER:|you}} can publish {{GENDER:|your}} edit",
+	"growthexperiments-addimage-onboarding-content-decision-image-alt-text": "Illustration of an article. An image is being suggested for the article. Inside of the suggestion there are three icon buttons for the options available: a checkmark to accept the suggestion, a cross to reject the suggestion, and an arrow to move to the next step.",
 	"growthexperiments-addsectionimage-onboarding-content-step1-title": "Images help people learn, but many articles don't have one.",
 	"growthexperiments-addsectionimage-onboarding-content-step1-body-paragraph1": "{{GENDER:|You}} will decide whether a suggested image should be put in a specific section of a Wikipedia article.",
 	"growthexperiments-addsectionimage-onboarding-content-step1-body-paragraph2": "Suggestions are machine-generated, and {{GENDER:|you'll use your}} judgment to decide whether to accept or reject them.",
