Section images: handle accepted/rejected suggestions submissions
Why:
 - To prevent showing accepted or rejected image suggestions again
in users task queue
 - To log section title and number in logs and analytics events

What:
- When invalidating a section image, remove the image_section tag
and the image one to prevent showing illustrated articles as
top-level image suggestion tasks
- Add section title and number to the invalidation instrumentation
call
- Bump schema version to 2.1.0
- Pass section title to log entry messages

Bug: T337767
Depends-On: I58994ccdd395323120b065795dbf6c7531ae36a0
Change-Id: I34ad2144e68b6d33cb4548f3bd43d078bfbd05c1

--- a/i18n/homepage/api/qqq.json
+++ b/i18n/homepage/api/qqq.json
@@ -19,5 +19,7 @@
 	"apihelp-growthinvalidateimagerecommendation-extended-description": "{{doc-apihelp-extended-description|growthimagesuggestiondata}}",
 	"apihelp-growthinvalidateimagerecommendation-param-tasktype": "{{doc-apihelp-param|growthinvalidateimagerecommendation|tasktype}}",
 	"apihelp-growthinvalidateimagerecommendation-param-title": "{{doc-apihelp-param|growthinvalidateimagerecommendation|title}}",
-	"apihelp-growthinvalidateimagerecommendation-param-filename": "{{doc-apihelp-param|growthinvalidateimagerecommendation|filename}}"
+	"apihelp-growthinvalidateimagerecommendation-param-filename": "{{doc-apihelp-param|growthinvalidateimagerecommendation|filename}}",
+	"apihelp-growthinvalidateimagerecommendation-param-sectiontitle": "{{doc-apihelp-param|growthinvalidateimagerecommendation|sectiontitle}}",
+	"apihelp-growthinvalidateimagerecommendation-param-sectionnumber": "{{doc-apihelp-param|growthinvalidateimagerecommendation|sectionnumber}}"
 }
