--- a/i18n/newcomertasks/api/qqq.json
+++ b/i18n/newcomertasks/api/qqq.json
@@ -20,13 +20,21 @@
 	"apihelp-growthexperiments-structured-task-submit-data-format-section-image-recommendation": "Documentation for the allowed format of certain API parameters. Parameters:\n* $1: A comma-separated list of keywords.\n* $2: A number.",
 	"apihelp-visualeditoredit-paramvalue-plugins-ge-task-link-recommendation": "{{doc-apihelp-paramvalue|visualeditoredit|plugins|ge-task-link-recommendation}}",
 	"apihelp-visualeditoredit-paramvalue-plugins-ge-task-image-recommendation": "{{doc-apihelp-paramvalue|visualeditoredit|plugins|ge-task-image-recommendation}}",
-	"apihelp-visualeditoredit-append-data-plugin-ge-task-link-recommendation": "Documentation for the <code>data-{plugin}</code> API parameter os the <code>visualeditoredit</code> Action API module for the <code>ge-task-link-recommendation</code> template parameter. $1 is {{msg-mw|apihelp-growthexperiments-structured-task-submit-data-format-link-recommendation}}.",
-	"apihelp-visualeditoredit-append-data-plugin-ge-task-image-recommendation": "Documentation for the <code>data-{plugin}</code> API parameter os the <code>visualeditoredit</code> Action API module for the <code>ge-task-image-recommendation</code> template parameter. $1 is {{msg-mw|apihelp-growthexperiments-structured-task-submit-data-format-image-recommendation}}.",
+	"apihelp-visualeditoredit-paramvalue-plugins-ge-task-section-image-recommendation": "{{doc-apihelp-paramvalue|visualeditoredit|plugins|ge-task-section-image-recommendation}}",
+	"apihelp-visualeditoredit-append-data-plugin-ge-task-link-recommendation": "Documentation for the <code>data-{plugin}</code> API parameter of the <code>visualeditoredit</code> Action API module for the <code>ge-task-link-recommendation</code> template parameter. $1 is {{msg-mw|apihelp-growthexperiments-structured-task-submit-data-format-link-recommendation}}.",
+	"apihelp-visualeditoredit-append-data-plugin-ge-task-image-recommendation": "Documentation for the <code>data-{plugin}</code> API parameter of the <code>visualeditoredit</code> Action API module for the <code>ge-task-image-recommendation</code> template parameter. $1 is {{msg-mw|apihelp-growthexperiments-structured-task-submit-data-format-image-recommendation}}.",
+	"apihelp-visualeditoredit-append-data-plugin-ge-task-section-image-recommendation": "Documentation for the <code>data-{plugin}</code> API parameter of the <code>visualeditoredit</code> Action API module for the <code>ge-task-section-image-recommendation</code> template parameter. $1 is {{msg-mw|apihelp-growthexperiments-structured-task-submit-data-format-section-image-recommendation}}.",
 	"apierror-growthexperiments-addimage-handler-accepted-missing": "{{doc-apierror}}",
 	"apierror-growthexperiments-addimage-handler-accepted-wrongtype": "{{doc-apierror}}\n\n$1 is the actual type.",
 	"apierror-growthexperiments-addimage-handler-reason-missing": "{{doc-apierror}}",
 	"apierror-growthexperiments-addimage-handler-reason-wrongtype": "{{doc-apierror}}\n\n$1 is the actual type.",
 	"apierror-growthexperiments-addimage-handler-reason-invaliditem": "{{doc-apierror}}\n\n$1 is the offending value, $2 is the comma-separated list of valid items.",
+	"apierror-growthexperiments-addimage-handler-section-title-missing": "{{doc-apierror}}",
+	"apierror-growthexperiments-addimage-handler-section-title-wrongtype": "{{doc-apierror}}\n\n$1 is the actual type.",
+	"apierror-growthexperiments-addimage-handler-section-number-missing": "{{doc-apierror}}",
+	"apierror-growthexperiments-addimage-handler-section-number-wrongtype": "{{doc-apierror}}\n\n$1 is the actual type.",
+	"apierror-growthexperiments-addsectionimage-handler-section-title-wrongtype": "{{doc-apierror}}\n\n$1 is the actual type.",
+	"apierror-growthexperiments-addsectionimage-handler-section-number-wrongtype": "{{doc-apierror}}\n\n$1 is the actual type.",
 	"apierror-growthexperiments-addlink-handler-notfound": "{{doc-apierror}}",
 	"apierror-growthexperiments-addlink-handler-wrongtargets": "API error message. $1 is a comma-separated list of page titles.\n{{doc-apierror}}",
 	"growthexperiments-underlinked-rescore-profile": "Description of 'underlinked' rescore profile (which is for internal use).",
