Section images: Update main dialog text
Clone RecommendedImageToolbarDialog and modify the copy.
Updating the scrolling and positioning behavior of the dialog
is left to a separate patch to avoid the easy part blocking
QA/i18n work.

Bug: T335209
Change-Id: Ib434ff556c0c056e843dd05f6fa34eac03bde5de

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -475,6 +475,8 @@
 	"growthexperiments-addimage-inspector-help-button": "Get help with editing",
 	"growthexperiments-addimage-inspector-details-button": "View image details",
 	"growthexperiments-addimage-inspector-description-placeholder": "No description available",
+	"growthexperiments-addsectionimage-inspector-title": "Add an image to an article section",
+	"growthexperiments-addsectionimage-inspector-cta": "Add this image to the article section \"$1\"?",
 	"growthexperiments-addimage-detailsdialog-header": "Image details",
 	"growthexperiments-addimage-detailsdialog-image": "Filename:",
 	"growthexperiments-addimage-detailsdialog-description": "Description:",
