Section images: Display section-image specific reasons
* Implement reason generation for section-level suggestion types
* Rename ImageRecommendationImage::SOURCE_WIKIDATA_SECTION to
  SOURCE_WIKIDATA_SECTION_TOPICS as there are several different
  Wikidata + section based sources now.
* Change ActionApiImageRecommendationApiHandler task type detection
  to match that of ProductionImageRecommendationApiHandler, so there
  is one less list of suggestion types to keep in sync.
* Convert some of ImageRecommendationMetadataProviderTest into an
  integration test so it actually tests message generation.
* Simplify some mocking code which used a JS-style closure handling
  pattern that's unnecessary in PHP.

Bug: T337803
Change-Id: I371cb4983bd7b4305e376619bc809fb7cf70bd06

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -556,8 +556,15 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "Used in the same article in $1 {{PLURAL:$1|other language|other languages}}: $2.",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "$1 {{PLURAL:$1|other|others}}",
 	"growthexperiments-addimage-reason-wikipedia-project": "Used in the same article in $1.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "Used in an equivalent article section in {{PLURAL:$1|one other language|$1 other languages}}.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "Used in an equivalent article section in {{PLURAL:$1|one other language|$1 other languages}}: $2.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "Used in an equivalent article section in $1.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "Used in an equivalent article section in $1, and relates to a Wikidata item that may be relevant to this article section.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "Used in an equivalent article section in $1 and {{PLURAL:$2|one more language|$2 more languages}}, and relates to a Wikidata item that may be relevant to this article section.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "Used in an equivalent article section in {{PLURAL:$1|one other language|$1 other languages}}, and relates to a Wikidata item that may be relevant to this article section.",
 	"growthexperiments-addimage-reason-wikidata": "Found in the Wikidata item for this article (strong match).",
 	"growthexperiments-addimage-reason-commons": "One of several images linked to the Wikidata item for this article.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "Linked to a Wikidata item that may be relevant to this article section.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "{{GENDER:|You}} have completed all of today's image suggestions.\n\nAdjust {{GENDER:|your}} difficulty levels to see other types of edits or come back tomorrow for more image suggestions.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "Got it",
 	"growthexperiments-addimage-caption-warning-tooshort": "Captions must be $1 {{PLURAL:$1|character|characters}} or longer.",
