Update "new missing article" message
Bug: T331785
Change-Id: Ief2aa0b3d009d0a59029d26d1be6f8d73f6fbc21

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -261,7 +261,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Select types of edits",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "Suggested edits are designed to help {{GENDER:|you}} learn to edit and become more skilled as you work on larger types of edits.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "Want to create a new article?",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "{{SITENAME}} editors recommend that {{GENDER:|you}} try a few medium and hard tasks first before attempting a new article. [$1 Learn more] about writing a new missing article.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "{{SITENAME}} editors recommend that {{GENDER:|you}} try a few medium and hard tasks first before attempting a new article. [$1 Learn more] about writing a new article.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "Select topics",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Done",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Done",
