Add gender support to growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-reason-*
Bug: T335975
Change-Id: I4ef8ea6af11974d25c7193b6150f3943cf060082

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -129,9 +129,9 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee": "Skip this {{GENDER:$1|mentee}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-header": "(Optional) Why would {{GENDER:|you}} like to skip this mentee?",
 	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-pretext": "Skipping a mentee will remove them from the praise-worthy list temporarily (for $1 {{PLURAL:$1|day|days}}). They can re-appear later if their following activity meets {{GENDER:|your}} preferred metrics.",
-	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-reason-already-praised": "I've already sent praise to this mentee",
-	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-reason-not-praiseworthy": "I don't think this mentee is praise-worthy",
-	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-reason-not-now": "I don't want to send praise now",
+	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-reason-already-praised": "I've already sent praise to this {{GENDER:$1|mentee}}",
+	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-reason-not-praiseworthy": "I don't think this {{GENDER:$1|mentee}} is praise-worthy",
+	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-reason-not-now": "I don't want to praise this {{GENDER:$1|mentee}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-reason-other": "Other / I'd rather not say",
 	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-submit": "Submit",
 	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-cancel": "Cancel",
