i18n: Fix en.json for addimage details dialog
Bug: T335714
Change-Id: I26f160eaeb182c8ec4e93f2139860e8c4a08338c

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -485,7 +485,7 @@
 	"growthexperiments-addimage-detailsdialog-date": "Date:",
 	"growthexperiments-addimage-detailsdialog-author": "Author:",
 	"growthexperiments-addimage-detailsdialog-categories": "Categories:",
-	"growthexperiments-addimage-detailsdialog-link": "Image file on Commons",
+	"growthexperiments-addimage-detailsdialog-link": "View image on Wikimedia Commons",
 	"growthexperiments-addimage-detailsdialog-close": "Close",
 	"growthexperiments-addimage-rejectiondialog-header": "Why not?",
 	"growthexperiments-addimage-rejectiondialog-subheader": "{{GENDER:|Your}} answers improve future suggestions.",
